Add app image with jpackage